# R-D-network-based-locating

./: .env.example  .gitignore  CODE_REVIEW_NOTES_FA.md  Obstacles and Blockers.md  R&DDocs.md  R&D_Final_Doc_EN.md  R&D_Final_Doc_FA.md  README.md  cal.txt  db.sqlite3  docker-compose.yml  draftNotes.txt  export_excel.py  main.py  manage.py  pyproject.toml  wifitest.py
.obsidian/: workspace.json
Json/: cell.json  info.json  package.json  raw.json  raw2.json
cellular/: admin.py  apps.py  choices.py  forms.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
cellular/api/: __init__.py
cellular/api/v1/: urls.py
cellular/api/v1/views/: __init__.py  calibration.py  positioning.py  system.py  towers.py
cellular/migrations/: 0001_initial.py  0002_celltower_antenna_azimuth.py  0002_towerlookuplog.py  0003_towerlookuplog_payloads.py
cellular/services/: locator.py  tower_resolver.py
cellular/services/providers/: base.py  combain.py  google_geolocation.py
cellular/templates/admin/celltower/: change_list.html  import_form.html
cellular/utils/: api_client.py  cleaners.py  geometry.py  import_jobs.py  importers.py  net.py  snapshots.py
front/: App.tsx  package-lock.json  types.ts
front/components/: MapIcons.tsx  MapView.tsx  SnapshotLocate.tsx
front/services/: snapshotService.ts  towerService.ts
towercell/: asgi.py  settings.py  urls.py  wsgi.py
towercell/templates/: home.html
